Parenting a Mask to Plane Track doesnt work #66499

Closed
opened 2019-07-06 10:13:06 +02:00 by Sebastian Koenig · 3 comments

System Information
Operating system: Linux-4.4.0-150-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 21:52, hash: a0f3ea7da3
Worked: 2.79

Short description of error
Parenting a mask to a planar track does not seem to work. The mask points show as parented, but when on playback the mask is not deformed by the track.

Exact steps for others to reproduce the error
This is probably the same as #65751.
And just like in that other bug I cannot add a testfile, because after saving and reopening the file everything works as expected.

**System Information** Operating system: Linux-4.4.0-150-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 21:52, hash: `a0f3ea7da3` Worked: 2.79 **Short description of error** Parenting a mask to a planar track does not seem to work. The mask points show as parented, but when on playback the mask is not deformed by the track. **Exact steps for others to reproduce the error** This is probably the same as #65751. And just like in that other bug I cannot add a testfile, because after saving and reopening the file everything works as expected.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Sergey Sharybin was assigned by Sebastian Koenig 2019-07-06 10:13:16 +02:00

This issue was referenced by 8066784ac2

This issue was referenced by 8066784ac232e4c527a77d9cc7b7328e8407e21b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66499
No description provided.