Fix T66499: Parenting a Mask to Plane Track doesnt work