source/blender/editors/space_clip/tracking_ops_plane.c
@@ -74,6 +74,7 @@ static int create_plane_track_tracks_exec(bContext *C, wmOperator *op)
     BKE_tracking_track_plane_from_existing_motion(plane_track, framenr);
   }
 
+  DEG_id_tag_update(&clip->id, ID_RECALC_COPY_ON_WRITE);
   WM_event_add_notifier(C, NC_MOVIECLIP | NA_EDITED, clip);
 
   return OPERATOR_FINISHED;
@@ -337,8 +338,7 @@ static int slide_plane_marker_modal(bContext *C, wmOperator *op, const wmEvent *
       data->previous_mval[1] = event->mval[1];
       copy_v2_v2(data->previous_corner, data->corner);
 
-      DEG_id_tag_update(&sc->clip->id, 0);
-
+      DEG_id_tag_update(&clip->id, ID_RECALC_COPY_ON_WRITE);
       WM_event_add_notifier(C, NC_MOVIECLIP | NA_EDITED, NULL);
 
       break;
@@ -355,7 +355,7 @@ static int slide_plane_marker_modal(bContext *C, wmOperator *op, const wmEvent *
 
         clip_tracking_show_cursor(C);
 
-        DEG_id_tag_update(&sc->clip->id, 0);
+        DEG_id_tag_update(&clip->id, ID_RECALC_COPY_ON_WRITE);
         WM_event_add_notifier(C, NC_MOVIECLIP | NA_EDITED, clip);
 
         return OPERATOR_FINISHED;
